2001-06-13  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (_AC_INCLUDES_DEFAULT_REQUIREMENTS): Guard
	sys/types.h and sys/stat.h, and check for them.

2001-06-13  Akim Demaille  <akim@epita.fr>

	* acheaders.m4 (AC_CHECK_HEADER, AC_CHECK_HEADERS): Support $4 =
	INCLUDES.

2001-06-12  Maciej W. Rozycki  <macro@ds2.pg.gda.pl>

	* acspecific.m4 (AC_PATH_XTRA): Check if linking against libX11
	succeeds and only try adding libdnet upon a failure.

2001-06-12  Akim Demaille  <akim@epita.fr>

	* autoscan.in (&output_kind): Output the comment only if it exists.
	(%kind_comment): Add entry for `programs'.
	(&output_programs): Use &output_kind.
	(&output_functions, &output_identifiers, &output_headers)
	(&output_programs): Inline, and remove.

2001-06-12  Akim Demaille  <akim@epita.fr>

	* autoscan.in (%kind_comment): New.
	(output_kind): New.
	(output_functions, output_identifiers, output_headers): Use it.

2001-06-12  Akim Demaille  <akim@epita.fr>

	* autoscan.in (&print_unique): Take `$kind' and `$word' as
	arguments, to factor indirections into `%macro' and `%used'.
	(%generic_macro): Fix a typo.

2001-06-12  Akim Demaille  <akim@epita.fr>

	* aclibraries: New.
	* autoscan.in (@kinds): Add `libraries'.
	Use `@kinds' instead of hard coded lists.
	(%programs, %headers, %identifiers, %makevars, %libraries, %functions):
	Remove, replaced by...
	(%used): this.

2001-06-12  Akim Demaille  <akim@epita.fr>

	* autoscan.in (%functions_macros %headers_macros)
	(%identifiers_macros %programs_macros %makevars_macros): Remove,
	replaced by...
	(%macro): New.

2001-06-11  Raja R Harinath  <harinath@cs.umn.edu>

	* aclang.m4 (AC_NO_EXECUTABLES): Override
	_AC_COMPILER_EXEEXT_WORKS, not _AC_LANG_COMPILER_WORKS.

2001-06-11  Akim Demaille  <akim@epita.fr>

	* aclang.m4 (AC_NO_EXECUTABLES): Define the macros with their
	trailing new line.
	Reported by Andreas Schwab.

2001-06-11  Akim Demaille  <akim@epita.fr>

	* Makefile.am, Makefile.maint: Typos.
